--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ node_modules
 *.env
 
 .idea/
+playground/replication/pmaster_data
+playground/replication/pslave_data
+playground/replication/pslave_data_backup
