--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-github-btn": "^1.0.5",
     "react-helmet": "^5.2.0",
     "react-live": "^2.0.1",
-    "system-components": "^3.0.3"
+    "system-components": "^3.0.3",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
   },
   "license": "MIT",
   "main": "n/a",
@@ -51,7 +53,10 @@
     "deploy": "yarn build && gh-pages -d public",
     "db:up": "docker-compose up",
     "db:down": "docker-compose down",
-    "db": "docker exec -it postgres_container psql --username postgres --password"
+    "db": "docker exec -it postgres_container psql --username postgres --password",
+    "play:rep:mongo": "docker-compose --file playground/replication_mongo/docker-compose.yml up",
+    "play:rep:mongo:down": "docker-compose --file playground/replication_mongo/docker-compose.yml down",
+    "play:rep": "ts-node-dev playground/replication_mongo/client.ts"
   },
   "devDependencies": {
     "gatsby-plugin-remove-trailing-slashes": "^2.0.11",
