feat: kafka demo

--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
     "play:rep:mongo": "docker-compose --file playground/replication_mongo/docker-compose.yml up",
     "play:rep:mongo:down": "docker-compose --file playground/replication_mongo/docker-compose.yml down",
     "play:rep": "ts-node-dev playground/replication_mongo/client.ts",
+    "play:kafka": "docker-compose --file playground/kafka/docker-compose.yml up",
+    "play:kafka:bitnami": "docker-compose --file playground/kafka/docker-compose.bitnami.yml up",
+    "play:kafka:bitnami:down": "docker-compose --file playground/kafka/docker-compose.bitnami.yml down",
+    "play:kafka:down": "docker-compose --file playground/kafka/docker-compose.yml up",
     "play:nginx": "docker-compose --file playground/load_balancer_nginx/docker-compose.yml up",
     "play:nginx:down": "docker-compose --file playground/load_balancer_nginx/docker-compose.yml down",
     "play:nginx:nodes:build": "docker-compose --file playground/load_balancer_nginx_nodes/docker-compose.yml build",
